docs(dns): add docs for dns&domain product

--- a/network/dns-cloud/concepts.mdx
+++ b/network/dns-cloud/concepts.mdx
@@ -1,16 +1,15 @@
 ---
 meta:
-  title: DNS - Concepts
-  description: This page explains all the concepts related to Scaleway's DNS service
+  title: DNS & Domains - Concepts
+  description: This page explains all the concepts related to Scaleway's DNS & Domains service
 content:
-  h1: DNS - Concepts
-  paragraph: This page explains all the concepts related to DNS
-tags: advanced settings
+  h1: Concepts
+  paragraph: This page explains all the concepts related to DNS & Domains
 categories:
   - compute
 ---
 
-**The DNS Namespace**
+**DNS Namespace**
 
 <Lightbox src="scaleway-domain-namespace.webp" alt="" />
 
@@ -26,7 +25,7 @@ categories:
 
 ## Domain Name
 
-A domain name (or just 'domain') is a unique name which identifies a website or IP address, e.g. scaleway.com. A domain may consist of a single [DNS Zone](#dns-zone), or be divided into several zones.
+A **domain name** or **domain** is an unique alphanumeric name used to identify a computer (web or email server) on the Internet. It translates the numeric address of the computer to a more legible human readable and memorable name. A domain can consist of a single [DNS Zone](#dns-zone), or be divided into several zones.
 
 </Concept>
 
@@ -34,7 +33,7 @@ A domain name (or just 'domain') is a unique name which identifies a website or 
 
 ## DNS
 
-The **D**omain **N**ame **S**ystem is a name management system for computing devices connected to a network, be it public (Internet) or private. It translates text-based [domain names](#domain-name) to numerical [IP addresses](/network/vpc/concepts/#ip-address). Scaleway provides a [managed DNS](#scaleway-dns) service.
+The **D**omain **N**ame **S**ystem is a name management system for computing devices connected to a network, be it public (Internet) or private. It translates text-based [domain names](/dedibox-network/domains/concepts/#domain-name) to numerical [IP addresses] (/dedibox-network/domains/concepts/#ip-address) or other services such as emails. Scaleway provides a [managed DNS](#scaleway-dns) service.
 
 </Concept>
 
@@ -42,7 +41,7 @@ The **D**omain **N**ame **S**ystem is a name management system for computing dev
 
 ## DNS nameserver
 
-A DNS nameserver stores the [DNS Records](#dns-record) for a given domain(s). Scaleway has its own nameservers for its managed domains.
+A DNS nameserver stores the [DNS Records](#dns-record) for given domains. Scaleway has its own nameservers for its managed domains.
 
 </Concept>
 
@@ -50,7 +49,7 @@ A DNS nameserver stores the [DNS Records](#dns-record) for a given domain(s). Sc
 
 ## DNS Record
 
-A [DNS](#dns) Record  holds information translating a domain or subdomain to an IP addresses, mail server or other domain/subdomain. DNS records for each [DNS Zone](#dns-zone) are stored within files called [DNS zone files](#dns-zone-file). These are hosted on [DNS nameservers](#dns-name-server). DNS records act as instructions for the DNS servers, so they know which domain names and IP addresses are associated with each other. DNS records can be of multiple types, called [resource records](#resource-records). Check out our documentation on [how to manage DNS records](/network/dns-cloud/how-to/manage-dns-records/).
+A [DNS](#dns) Record holds information translating a domain or subdomain to an IP address, mail server or other domain/subdomain. DNS records for each [DNS Zone](#dns-zone) are stored within files called [DNS zone files](#dns-zone-file). These are hosted on [DNS nameservers](#dns-name-server). DNS records act as instructions for the DNS servers, so they know which domain names and IP addresses are associated with each other. DNS records can be of multiple types, called [resource records](#resource-records). Check out our documentation on [how to manage DNS records](/network/dns-cloud/how-to/manage-dns-records/).
 
 </Concept>
 
@@ -76,7 +75,7 @@ A DNS zone file describes a [DNS Zone](#dns-zone), containing DNS records which 
 
 DNS domains are all organized in a hierarchy called the DNS namespace. The hierarchy consists of:
 
-* **Top Level Domains**: .com or .net, for example.
+* **Top Level domains**: .com or .net, for example.
 * **Second-level domains**: example.com
 * **Subdomains**: mysite.example.com or sub.domain.example.com.
 
@@ -86,7 +85,7 @@ DNS domains are all organized in a hierarchy called the DNS namespace. The hiera
 
 ## External Domain
 
-An external domain is any domain created via an external registrar (ie not by Scaleway). Scaleway DNS is currently able to manage DNS zones for external domains.
+An external domain is any domain created via an external registrar (i.e. not by Scaleway). Scaleway DNS is currently able to manage DNS zones for external domains.
 
 </Concept>
 
@@ -119,7 +118,7 @@ Reverse DNS can be helpful when sending emails from your server. Indeed, many ma
 
 ## Root Server
 
-Root Servers are a type of [DNS nameservers](#dns-name-server) pertaining to Top Level domains. They are the first step in the resolution of any domain name, since they contain information about the authoritative DNS servers for each Top Level domain .
+Root Servers are a type of [DNS nameservers](#dns-name-server) pertaining to Top Level domains. They are the first step in the resolution of any domain name, since they contain information about the authoritative DNS servers for each Top Level domain.
 
 </Concept>
 
