--- a/network/dns-cloud/quickstart.mdx
+++ b/network/dns-cloud/quickstart.mdx
@@ -1,9 +1,9 @@
 ---
 meta:
-  title: DNS - Quickstart
+  title: DNS & Domains - Quickstart
   description: This page shows you how to get started with Scaleway DNS.
 content:
-  h1: DNS - Quickstart
+  h1: DNS & Domains - Quickstart
   paragraph: This page shows you how to get started with Scaleway DNS.
 dates:
   validation: 2022-11-03
