docs(domains): replace wording

--- a/network/dns-cloud/concepts.mdx
+++ b/network/dns-cloud/concepts.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
-  title: DNS & Domains - Concepts
-  description: This page explains all the concepts related to Scaleway's DNS & Domains service
+  title: Domains & DNS - Concepts
+  description: This page explains all the concepts related to Scaleway's Domains & DNS service
 content:
   h1: Concepts
-  paragraph: This page explains all the concepts related to DNS & Domains
+  paragraph: This page explains all the concepts related to Domains & DNS
 categories:
   - compute
 ---
@@ -57,7 +57,7 @@ A [DNS](#dns) Record holds information translating a domain or subdomain to an I
 
 ## DNS Zone
 
-A DNS zone hosts the [DNS records for a distinct part of the global [domain namespace](#dns-namespace), and is managed by a specific organization or administrator. For example with Scaleway DNS, if you are managing the external domain `example.com` with us, this is your root zone. You can [create further zones and subdomains](/network/dns-cloud/how-to/configure-dns-zones/), eg `mysubdomain.example.com`.
+A DNS zone hosts the [DNS records for a distinct part of the global [domain namespace](#dns-namespace), and is managed by a specific organization or administrator. For example with Scaleway Domains & DNS, if you are managing the external domain `example.com` with us, this is your root zone. You can [create further zones and subdomains](/network/dns-cloud/how-to/configure-dns-zones/), eg `mysubdomain.example.com`.
 
 </Concept>
 
@@ -85,7 +85,7 @@ DNS domains are all organized in a hierarchy called the DNS namespace. The hiera
 
 ## External Domain
 
-An external domain is any domain created via an external registrar (i.e. not by Scaleway). Scaleway DNS is currently able to manage DNS zones for external domains.
+An external domain is any domain created via an external registrar (i.e. not by Scaleway). Scaleway Domains & DNS is currently able to manage DNS zones for external domains.
 
 </Concept>
 
@@ -124,8 +124,8 @@ Root Servers are a type of [DNS nameservers](#dns-name-server) pertaining to Top
 
 <Concept>
 
-## Scaleway DNS
+## Scaleway Domains & DNS
 
-Scaleway DNS is a managed [DNS](#dns) service that allows you to easily configure the [DNS Zones](#dns-zone) of your [domains](#domain-name). It provides support for queries via both IPv4 and IPv6, and supports all common types of [DNS records](#dns-record).
+Scaleway Domains & DNS is a managed [DNS](#dns) service that allows you to easily configure the [DNS Zones](#dns-zone) of your [domains](#domain-name). It provides support for queries via both IPv4 and IPv6, and supports all common types of [DNS records](#dns-record).
 
 </Concept>
