--- a/network/dns-cloud/how-to/delete-external-domain.mdx
+++ b/network/dns-cloud/how-to/delete-external-domain.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
-  title: How to delete a domain from Scaleway DNS
-  description: This page explains how to delete a domain from Scaleway DNS
+  title: How to delete a domain from Scaleway Domains & DNS
+  description: This page explains how to delete a domain from Scaleway Domains & DNS
 content:
-  h1: How to delete a domain from Scaleway DNS
-  paragraph: This page explains how to delete a domain from Scaleway DNS
+  h1: How to delete a domain from Scaleway Domains & DNS
+  paragraph: This page explains how to delete a domain from Scaleway Domains & DNS
 dates:
   validation: 2021-12-31
   posted: 2021-06-07
@@ -13,7 +13,7 @@ dates:
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway DNS
+- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway Domains & DNS
 
 </Message>
 
@@ -31,7 +31,7 @@ dates:
     <Lightbox src="scaleway-dns-delete-domain.webp" alt="" />
     <Message type="important">
 
-    This will permanently delete your external domain and its related zones from Scaleway DNS. This action is irreversible and your domain name may become unresolvable. 
+    This will permanently delete your external domain and its related zones from Scaleway Domains & DNS. This action is irreversible and your domain name may become unresolvable. 
 
     </Message>
 
