--- a/network/dns-cloud/how-to/index.mdx
+++ b/network/dns-cloud/how-to/index.mdx
@@ -1,8 +1,8 @@
 ---
 meta:
-  title: DNS & Domains - How Tos
+  title: Domains & DNS - How Tos
   description: DNS How Tos
 content:
-  h1: DNS & Domains - How Tos
+  h1: Domains & DNS - How Tos
   paragraph: DNS How Tos
 ---
