--- a/network/dns-cloud/how-to/register-internal-domain.mdx
+++ b/network/dns-cloud/how-to/register-internal-domain.mdx
@@ -12,7 +12,7 @@ dates:
 
 Domains and DNS is a managed service, that allows you to register a domain name and configure its DNS zones from a graphical interface. It provides support for queries via both IPv4 and IPv6 and supports all common types of DNS records.
 
-Scaleway DNS is currently available to manage DNS zones for external domains (domains created at external registrars). 
+Scaleway Domains & DNS is currently available to manage DNS zones for external domains (domains created at external registrars). 
 
 <Message type="requirement">
 
