--- a/network/dns-cloud/how-to/configure-dns-zones.mdx
+++ b/network/dns-cloud/how-to/configure-dns-zones.mdx
@@ -19,7 +19,7 @@ Each **Zone Name** created translates into a [**Domain Name**](/network/dns-clou
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway DNS
+- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway Domains & DNS
 
 </Message>
 
