--- a/network/dns-cloud/how-to/manage-external-domain.mdx
+++ b/network/dns-cloud/how-to/manage-external-domain.mdx
@@ -16,7 +16,7 @@ Once your external domains have been created and validated, you can manage them 
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway DNS
+- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway Domains & DNS
 
 </Message>
 
@@ -31,7 +31,7 @@ Once your external domains have been created and validated, you can manage them 
   
   </Message>
 
-The **Domain Information** page displays. This gives you an overview of the status of your domain, as well as a list of all nameservers associated with it. At the bottom of the page you also have the option of deleting your domain from Scaleway DNS. 
+The **Domain Information** page displays. This gives you an overview of the status of your domain, as well as a list of all nameservers associated with it. At the bottom of the page you also have the option of deleting your domain from Scaleway Domains & DNS. 
 
 <Lightbox src="scaleway-dns-domain-information.webp" alt="" />
 
