--- a/network/dns-cloud/how-to/configure-autorenew.mdx
+++ b/network/dns-cloud/how-to/configure-autorenew.mdx
@@ -21,7 +21,7 @@ Autorenew is a feature that allows you to automatically renew the validity perio
 
 ## How to activate autorenew
 
-1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
 The Domain & DNS dashboard displays. 
 
@@ -35,7 +35,7 @@ Autorenew is activated for your domain name.
 
 ## How to deactivate autorenew
 
-1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
 The Domain & DNS dashboard displays. 
 
