--- a/network/dns-cloud/how-to/configure-dnssec-internal-domain.mdx
+++ b/network/dns-cloud/how-to/configure-dnssec-internal-domain.mdx
@@ -21,7 +21,7 @@ DNSSEC uses digital signatures based on public key cryptography to strengthen DN
 
 ## How to activate DNSSEC
 
-1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
  The Domain & DNS dashboard displays. 
 
@@ -35,7 +35,7 @@ DNSSEC uses digital signatures based on public key cryptography to strengthen DN
 
 ## How to deactivate DNSSEC
 
-1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
   The Domain & DNS dashboard displays.
   
