--- a/network/dns-cloud/how-to/manage-nameservers-internal-domain.mdx
+++ b/network/dns-cloud/how-to/manage-nameservers-internal-domain.mdx
@@ -19,7 +19,7 @@ Scaleway Domains & DNS provides a managed DNS solution by providing default name
 
 </Message>
 
-1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
  The Domain & DNS dashboard displays. 
  
