--- a/network/dns-cloud/how-to/register-internal-domain.mdx
+++ b/network/dns-cloud/how-to/register-internal-domain.mdx
@@ -10,7 +10,7 @@ dates:
   posted: 2022-10-12
 ---
 
-Domains and DNS is a managed service, that allows you to register a domain name and configure its DNS zones from a graphical interface. It provides support for queries via both IPv4 and IPv6 and supports all common types of DNS records.
+Domains & DNS is a managed service, that allows you to register a domain name and configure its DNS zones from a graphical interface. It provides support for queries via both IPv4 and IPv6 and supports all common types of DNS records.
 
 Scaleway Domains & DNS is currently available to manage DNS zones for external domains (domains created at external registrars). 
 
