docs(domains): add navigation buttons

--- a/network/dns-cloud/how-to/configure-autorenew.mdx
+++ b/network/dns-cloud/how-to/configure-autorenew.mdx
@@ -46,3 +46,9 @@ The Domain & DNS dashboard displays.
 4. Click **Validate** in the pop-up to confirm. 
 
 Autorenew is deactivated for your domain name.
+
+ 
+<Navigation title="See Also">
+  <PreviousButton to="/network/dns-cloud/how-to/register-internal-domain/">How to register a domain name</PreviousButton>
+  <NextButton to="/network/dns-cloud/how-to/unlock-internal-domain/">How to unlock a domain</NextButton>
+</Navigation>
