--- a/network/dns-cloud/how-to/configure-dnssec-external-domain.mdx
+++ b/network/dns-cloud/how-to/configure-dnssec-external-domain.mdx
@@ -52,3 +52,8 @@ DNSSEC uses digital signatures based on public key cryptography to strengthen DN
 4. Edit the DNSSEC information for your domain name, then click **Edit DNSSEC** to validate. 
 
 5. Click **Deactivate DNSSEC** to deactivate DNSSEC. 
+
+<Navigation title="See Also">
+  <PreviousButton to="/network/dns-cloud/how-to/configure-dnssec-internal-domain/">How to configure DNSSEC for an internal domain</PreviousButton>
+  <NextButton to="/network/dns-cloud/how-to/configure-dns-zones/">How to configure DNS zones</NextButton>
+</Navigation>
