--- a/network/dns-cloud/how-to/configure-dnssec-internal-domain.mdx
+++ b/network/dns-cloud/how-to/configure-dnssec-internal-domain.mdx
@@ -42,3 +42,8 @@ DNSSEC uses digital signatures based on public key cryptography to strengthen DN
 2. Click the domain name you want to configure.
 
 3. Click **Deactivate** next to **DNSSEC** in the domain information section.
+
+<Navigation title="See Also">
+  <PreviousButton to="/network/dns-cloud/how-to/manage-nameservers-internal-domain/">How to manage nameservers of an internal domain name</PreviousButton>
+  <NextButton to="/network/dns-cloud/how-to/configure-dnssec-external-domain/">How to configure DNSSEC for an external domain</NextButton>
+</Navigation>
