--- a/network/dns-cloud/how-to/manage-nameservers-internal-domain.mdx
+++ b/network/dns-cloud/how-to/manage-nameservers-internal-domain.mdx
@@ -38,8 +38,13 @@ Scaleway Domains & DNS provides a managed DNS solution by providing default name
 
     </Message>
 
-    You can provide up to seven (TO VALIDATE) DNS servers for each domain name. To add additional servers, click **Add name server** and enter you server's information. 
+    It is recommended to confiugure a minimum of two and a maximum of seven DNS servers for each domain name. To add additional servers, click **Add name server** and enter you server's information. 
 
 5. Click <Icon name="delete" /> to remove a nameserver, then click **Delete** in the pop-up to confirm.
 
 6. Click <Icon name="validate" /> to validate your configuration. To abandon the modifications click <Icon name="cancel" />. 
+
+<Navigation title="See Also">
+  <PreviousButton to="/network/dns-cloud/how-to/unlock-internal-domain/">Unlock a domain</PreviousButton>
+  <NextButton to="/network/dns-cloud/how-to/configure-dnssec-internal-domain/">How to configure DNSSEC of an internal domain</NextButton>
+</Navigation>
