--- a/network/dns-cloud/how-to/register-internal-domain.mdx
+++ b/network/dns-cloud/how-to/register-internal-domain.mdx
@@ -12,7 +12,7 @@ dates:
 
 Domains & DNS is a managed service, that allows you to register a domain name and configure its DNS zones from a graphical interface. It provides support for queries via both IPv4 and IPv6 and supports all common types of DNS records.
 
-Scaleway Domains & DNS is currently available to manage DNS zones for external domains (domains created at external registrars). 
+Scaleway Domains & DNS is available to manage DNS zones for internal and external domains (domains created at external registrars). 
 
 <Message type="requirement">
 
@@ -41,6 +41,12 @@ Scaleway Domains & DNS is currently available to manage DNS zones for external d
 
 <Message type="important">
 
-Make sure to check your domain name for any spelling issues before you place the order. You cannot change the domain name once the registration is complete and the fees will still apply. You can of course make a new registration with the correctly spelled domain name.
+Make sure to check your domain name for any spelling issues before you place the order. 
+* You cannot change the domain name once the registration is complete and the fees will still apply. You can of course make a new registration with the correctly spelled domain name.
+* Internal domains are billed immediately upon registration.
 
 </Message>
+
+<Navigation title="See Also">
+  <NextButton to="/network/dns-cloud/how-to/configure-autorenew/">How to configure autorenew</PreviousButton>
+</Navigation>
