--- a/network/dns-cloud/how-to/unlock-internal-domain.mdx
+++ b/network/dns-cloud/how-to/unlock-internal-domain.mdx
@@ -51,3 +51,8 @@ Domain names are locked by default to avoid any unsolicited outgoing transfer. I
 2. Click the domain name you want to configure.
 
 3. Click **Lock** next to **Transfer** in the domain information section.
+
+<Navigation title="See Also">
+  <PreviousButton to="/network/dns-cloud/how-to/configure-autorenew/">How to configure autorenew</PreviousButton>
+  <NextButton to="/network/dns-cloud/how-to/manage-nameservers-internal-domain/">How to manage neameservers of an internal domain</NextButton>
+</Navigation>
