--- a/network/dns-cloud/how-to/configure-dns-zones.mdx
+++ b/network/dns-cloud/how-to/configure-dns-zones.mdx
@@ -74,6 +74,6 @@ Each **Zone Name** created translates into a [**Domain Name**](/network/dns-clou
     </Message>
 
 <Navigation title="See Also">
-  <PreviousButton to="/network/dns-cloud/how-to/add-external-domain/">How to add an external domain</PreviousButton>
+  <PreviousButton to="/network/dns-cloud/how-to/configure-dnssec-external-domain/">How to confiugure DNSSEC for an external domain</PreviousButton>
   <NextButton to="/network/dns-cloud/how-to/manage-dns-records/">How to manage DNS records</NextButton>
 </Navigation>
