--- a/network/load-balancer/reference-content/configuring-load-balancer.mdx
+++ b/network/load-balancer/reference-content/configuring-load-balancer.mdx
@@ -21,14 +21,13 @@ In this document, we explain some of the different configurations available when
 
 The frontend listens on the port you specify, and forwards received requests to the backend(s)
 
-When creating a frontend, aside from the name the only configurable setting is that of the **port** it will listen on.
+When creating a frontend, aside from the name the only configurable setting is that of the **port** it listens on.
 
 ### Choosing a port
 
-The most commonly-chosen ports for Load Balancer frontend's to listen on are:
+For HTTP, a frontend will typically listen on port 80, while for HTTPS it will typically listen on port 443. 
 
-* **Port 80 - HTTP**: Port 80 is commonly assigned to HTTP, and as such is the default network port used to send and receive unencrypted web traffic.
-* **Port 443 - HTTPS**: Port 443 is commonly assigned to HTTPS, so is the standard port for secure (encrypted) HTTP traffic.
+After creating your Load Balancer, you can create multiple frontends to listen on different ports, and connect them to different backends as required. You can also set up custom [ACL rules](/network/load-balancer/how-to/create-manage-acls/) for each frontend.
 
 ## Configuring a backend 
 
@@ -38,25 +37,25 @@ A number of configuration settings are available.
 
 <Message type="note">
 
-  The term "backend" is used simultaneously to refer to the set of configurations that determine how the Load Balancer forwards traffic, and the real destination "backend servers" which it forwards traffic on to. When creating a backend for your Load Balancer, you are prompted to set the configuration and give the IP addresses of the backend servers to forward traffic to.
+  Here, the term "backend" refers to a set of configurations that determine how the Load Balancer forwards traffic. You can create one or more backends for your Load Balancer. The term "backend server" designates the final-destination backend servers which the Load Balancer forwards traffic on to. Each backend must specify one or more backend servers (via their IP addresses) to forward to.
 
 </Message>
 
 ### Choosing a protocol and port 
 
-The Load Balancer will initiate connections to backend servers using the protocol and port you define here. The most commonly-chosen port/protocol combinations are:
+The Load Balancer initiates connections to its backend servers using the protocol and port you define. 
 
-* **Port 80 + HTTP protocol**: Traffic will be forwarded using HTTP protocol, without encryption.
-* **Port 443 + HTTPS protocol**: Traffic will be forwarded using HTTPS, i.e. with encryption.
-* **Port 80/443 + TCP protcol**: ??
+* **HTTP protocol (typically port 80)**: The Load Balancer will initiate an HTTP connection with the backend server. Traffic will be forwarded without encryption.
+* **HTTPS protocol (typically port 443)**: The Load Balancer will attempt to initiate an HTTPS connection with the backend server. In this case, the backend server must have an SSL/TLS certificate. Traffic will be forwarded using HTTPS, i.e. with encryption.
+* **TCP protocol**: The Load Balancer will attempt to initiate a TCP (layer 4) connection to the backend server. 
 
 ### Choosing a Verify Certificate setting
 
-If you select the HTTPS protocol, you are prompted to choose a Verify Certificate setting. Note that this setting is not relevant / prompted for if you selected HTTP or HTTPS protocol.
+If you select the HTTPS protocol, you are prompted to choose a Verify Certificate setting. Note that this setting does not display if you selected HTTP or TCP protocol.
 
 When the Load Balancer initiates an HTTPS connection to a backend server, the backend server presents its certificate. 
 - When Verify Certificate is selected, the Load Balancer checks the backend server's certificate and only connects if it is valid.
-- When Verify Certificate is unselected, the Load Balancer does ot check the backend server's certificate, connecting to the backend server regardless of the certificate's validity. 
+- When Verify Certificate is unselected, the Load Balancer does not check the backend server's certificate, connecting to the backend server regardless of the certificate's validity. 
 
 This setting mostly concerns those using self-signed certificates on the backend server/s.
 
@@ -84,7 +83,7 @@ Load Balancers should only forward traffic to “healthy” backend servers. To 
 * **Redis**: No additional settings are required for REDIS health checks.
 * **TCP**: No additional settings are required for TCP health checks.
 
-### Adding server IPs
+### Adding server IPs (backend servers)
 
 You can add one or more IP addresses, in either IPv4 or IPv6, of the backend servers your Load Balancer's backend will forward traffic to.
 
@@ -96,3 +95,33 @@ Here, you have the option to activate **sticky sessions**. When activated, this 
 - **Table-based** stickiness uses the source (client) IP address to stick sessions to backends.
 
 By default, when activating sticky sessions through the console, the cookie-based method is used when HTTP protocol is selected, and the table-based method is used when TCP protocol is selected. Use the [API](https://developers.scaleway.com/en/products/lb/zoned_api/) if you want to select table-based stickiness with HTTP protocol.
+
+## Configuring a Load Balancer for SSL bridging
+
+SSL bridging allows the user to initiate a secure HTTPS connection with the Load Balancer thanks to the Load Balancer frontend's SSL certificate. The Load Balancer uses its SSL certificate to decrypt incoming HTTPS traffic. This allows the Load Balancer to carry out layer 7 actions on the received traffic. The Load Balancer's backend then initiates a new HTTPS connection to re-encrypt traffic between the Load Balancer and the backend server, this time using the backend server's certificate. 
+
+<Lightbox src="scaleway-ssl-bridging.png" alt="" />
+
+To configure your Load Balancer for SSL bridging:
+
+- The frontend should listen on port 443.
+- The frontend must have an [SSL certificate](TODO).
+- The backend should be configured to initiate connections using port 443 and HTTPS protocol.
+- The backend server should have its own SSL certificate.
+
+## Configuring a Load Balancer for SSL offloading
+
+SSL offloading, also known as SSL termination, allows the user to initiate a secure HTTPS connection with the Load Balancer thanks to the Load Balancer frontend's SSL certificate. The Load Balancer uses its SSL certificate to decrypt incoming HTTPS traffic. Layer 7 actions may therefore be applied to the traffic at this stage. Traffic is not re-encrypted on its way from the Load Balancer to the backend server, unlike with SSL bridging. Traffic that has gone through the offloading process is marked with a new header, called `X-Forwarded-Proto`.
+
+<Lightbox src="scaleway-ssl-bridging.png" alt="" />
+
+To configure your Load Balancer for SSL bridging:
+
+- The frontend should listen on port 443.
+- The frontend must have an [SSL certificate](TODO).
+- The backend should be configured to initiate connections using port 80 and HTTP protocol.
+- The backend server does not need its own SSL certificate.
+
+## Configuring a Load Balancer for SSL Passthrough
+
+Passthrough is the simplest way to handle HTTPS traffic on a Load Balancer. As the name suggests, traffic is simply passed through the Load Balancer without being decrypted on it. Whilst this option generates very low overhead, no layer 7 actions can be carried out. This means that no cookie-based sticky sessions are possible with this method. In addition, if an application does not share sessions between servers, users’ sessions may get lost by being redirected to different servers of the group.
