fix(load-balancer): finish reconfig

--- a/network/load-balancer/concepts.mdx
+++ b/network/load-balancer/concepts.mdx
@@ -23,7 +23,15 @@ An **A**ccess **C**ontrol **L**ist (ACL) is a list of permissions that control w
 
 ## Backends
 
-Each Load Balancer is configured with one or several backends. A backend is a set of servers which receives forwarded requests from the frontend. You can [add and manage backends via the console](/network/load-balancer/how-to/manage-frontends-and-backends/).
+Each Load Balancer has one or several backends. A backend is a configuration used by the Load Balancer to forward traffic to its destination servers. Each backend uses the specified configuration (port, protocol, proxy protocol etc) to forward traffic to its designated [backend servers](#backend-servers). For more information about configuring your Load Balancer's backend(s), see our [dedicated documentation](/network/load-balancer/reference-content/configuring-load-balancer#configuring-a-backend).
+
+</Concept>
+
+<Concept opened>
+
+## Backend servers
+
+The term "backend server" designates the final-destination backend servers which the Load Balancer forwards traffic on to. Each of the Load Balancer's [backends](#backends) must specify one or more backend servers (via their IP addresses) to forward to.
 
 </Concept>
 
@@ -44,7 +52,23 @@ For more information about balancing rules, refer to our [blog post "What is a l
 
 </Concept>
 
-<Concept opened>
+<Concept>
+
+## Certificate
+
+An certificate (aka SSL certificate / TLS certificate / TLS/SSL certificate) is a digital certificate that enables an encrypted connection between a client and a web server. 
+
+<Message type="tip">
+
+  You may hear certificates referred to as "SSL certificates", "TLS certificates" or "TLS/SSL certificates". These are all the same thing. SSL was the protocol initially used for encryption, though modern certificates in fact use TLS (Transport Layer Security) as the encryption protocol.
+
+</Message>
+
+You can [add a  certificate](/network/load-balancer/how-to/add-certificate) to your Load Balancer's frontend to enable the Load Balancer to encrypt/decrypt incoming traffic, necessary for [SSL bridging and SSL offloading configurations](/network/load-balancer/reference-content/configuring-load-balancer). Scaleway Load Balancer enables you to generate a Let's Encrypt certificate, or import a third-party or self-signed certificate.
+
+</Concept>
+
+<Concept>
 
 ## Frontends
 
@@ -81,6 +105,8 @@ A high availability (HA) setup is an infrastructure without a single point of fa
 ## Load Balancers
 [Load Balancers](/network/load-balancer/how-to/create-load-balancer/) are highly available and fully managed instances that allow you to distribute workload across multiple servers. They ensure the scaling of all your applications while securing their continuous availability, even in the event of heavy traffic. They are commonly used to improve the performance and reliability of web sites, applications, databases and other services.
 
+<Lightbox src="scaleway-load-balancer.webp" alt="" />
+
 </Concept>
 
 <Concept>
@@ -111,7 +137,7 @@ Proxy protocol is an internet protocol used to transfer connection information f
 
 ## SSL bridging
 
-[SSL bridging](/network/load-balancer/how-to/setup-ssl-offloading#how-to-#how-to-configure-tlsssl-bridging) removes SSL-based encryption from HTTPS traffic coming into the Load Balancer (as with SSL offloading), but then initiates a new SSL connection to rencrypt traffic between the Load Balancer and the backend servers.
+[SSL bridging](/network/load-balancer/reference-content/configuring-load-balancer#configuring-a-load-balancer-for-ssl-bridging) removes SSL-based encryption from HTTPS traffic coming into the Load Balancer (as with SSL offloading), but then initiates a new SSL connection to re-encrypt traffic between the Load Balancer and the backend servers.
 
 </Concept>
 
@@ -119,7 +145,7 @@ Proxy protocol is an internet protocol used to transfer connection information f
 
 ## SSL offloading
 
-[SSL offloading](/network/load-balancer/how-to/setup-ssl-offloading#how-to-configure-tlsssl-offloading) removes SSL-based encryption from HTTPS traffic coming into the Load Balancer.
+[SSL offloading](/network/load-balancer/reference-content/configuring-load-balancer#configuring-a-load-balancer-for-ssl-offloading) removes SSL-based encryption from HTTPS traffic coming into the Load Balancer.
 
 </Concept>
 
@@ -127,7 +153,7 @@ Proxy protocol is an internet protocol used to transfer connection information f
 
 ## SSL passthrough
 
-[SSL passthrough](/network/load-balancer/how-to/setup-ssl-offloading#how-to-configure-tlsssl-passthrough) is the simplest way to handle HTTPS traffic on a Load Balancer. As the name suggests, traffic is simply passed through the Load Balancer without being decrypted.
+[SSL passthrough](/network/load-balancer/reference-content/configuring-load-balancer#configuring-a-load-balancer-for-ssl-passthrough) is the simplest way to handle HTTPS traffic on a Load Balancer. As the name suggests, traffic is simply passed through the Load Balancer without being decrypted.
 
 </Concept>
 
@@ -141,5 +167,13 @@ A sticky session enables the Load Balancer to bind a user's session to a specifi
 - **Table-based** stickiness uses the source (client) IP address to stick sessions to backends.
 
 By default, when activating sticky sessions through the console, the cookie-based method is used when HTTP protocol is selected, and the table-based method is used when TCP protocol is selected. Use the [API](https://developers.scaleway.com/en/products/lb/zoned_api/#sticky-sessions-555758) if you want to select table-based stickiness with HTTP protocol.
+
+</Concept>
+
+<Concept>
+
+## Verify certificate 
+
+The [Verify Certificate configuration](/network/load-balancer/reference-content/configuring-load-balancer/#choosing-a-verify-certificate-setting) is relevant to Load Balancers with backends using HTTPS protocol, and specifies whether the Load Balancer should check the backend server's [certificate](#certificate) before initiating a connection.
 
 </Concept>
