--- a/network/load-balancer/reference-content/configuring-load-balancer.mdx
+++ b/network/load-balancer/reference-content/configuring-load-balancer.mdx
@@ -15,6 +15,8 @@ categories:
 
 Load Balancers allow you to distribute traffic and workload across multiple backend servers. They make it easy to scale your applications while ensuring continuous availability even in the event of heavy traffic. Each Load Balancer that you create is a highly available and fully managed Instance, consisting of one or more frontends and one or more backends. You can configure your Load Balancer according to your needs.
 
+<Lightbox src="scaleway-load-balancer.webp" alt="" />
+
 In this document, we explain some of the different configurations available when setting up your Load Balancer, and give examples of how to configure its frontends and backends for different use cases.
 
 ## Configuring a frontend
@@ -105,22 +107,22 @@ SSL bridging allows the user to initiate a secure HTTPS connection with the Load
 To configure your Load Balancer for SSL bridging:
 
 - The frontend should listen on port 443.
-- The frontend must have an [SSL certificate](TODO).
+- The frontend must have a [certificate](/network/load-balancer/how-to/add-certificate).
 - The backend should be configured to initiate connections using port 443 and HTTPS protocol.
-- The backend server should have its own SSL certificate.
+- The backend server should have its own [certificate](/network/load-balancer/concepts#certificate).
 
 ## Configuring a Load Balancer for SSL offloading
 
 SSL offloading, also known as SSL termination, allows the user to initiate a secure HTTPS connection with the Load Balancer thanks to the Load Balancer frontend's SSL certificate. The Load Balancer uses its SSL certificate to decrypt incoming HTTPS traffic. Layer 7 actions may therefore be applied to the traffic at this stage. Traffic is not re-encrypted on its way from the Load Balancer to the backend server, unlike with SSL bridging. Traffic that has gone through the offloading process is marked with a new header, called `X-Forwarded-Proto`.
 
-<Lightbox src="scaleway-ssl-bridging.webp" alt="" />
+<Lightbox src="scaleway-ssl-offloading.webp" alt="" />
 
-To configure your Load Balancer for SSL bridging:
+To configure your Load Balancer for SSL offloading:
 
 - The frontend should listen on port 443.
-- The frontend must have an [SSL certificate](TODO).
+- The frontend must have a [certificate](/network/load-balancer/how-to/add-certificate).
 - The backend should be configured to initiate connections using port 80 and HTTP protocol.
-- The backend server does not need its own SSL certificate.
+- The backend server does not need its own certificate.
 
 ## Configuring a Load Balancer for SSL passthrough
 
@@ -132,4 +134,4 @@ To configure your Load Balancer for SSL passthrough:
 
 - The frontend should listen on port 443.
 - The backend should be configured to initiate connections using port 443 and TCP protocol.
-- The backend server must have its own SSL certificate to decrypt traffic.
+- The backend server must have its own [certificate](/network/load-balancer/concepts#certificate).
