Apply suggestions from code review
Co-authored-by: nedaehm <87707325+nedaehm@users.noreply.github.com>

--- a/network/dns-cloud/how-to/_renew-internal-domain.mdx
+++ b/network/dns-cloud/how-to/_renew-internal-domain.mdx
@@ -24,9 +24,9 @@ You can renew your domain name at any time during the validity period, directly 
 
   The Domain & DNS dashboard displays. 
   
-2. Click the domain name you want to configure.
+2. Click the domain name you want to configure. You are redirected to your domain's overview page.
 
-3. Click **Renew** next to the domain's expiry date in the **Domain Information** block.
+3. Click **Activate** under **Autorenew**.
 
 4. Check the domain names you want to renew. Then click **Select and configure contacts**.
 
