--- a/network/dns-cloud/how-to/configure-autorenew.mdx
+++ b/network/dns-cloud/how-to/configure-autorenew.mdx
@@ -23,29 +23,29 @@ Autorenew is a feature that allows you to automatically renew the validity perio
 
 1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
-The Domain & DNS dashboard displays. 
+The Domain & DNS dashboard displays with a list of your internal domains.
 
 2. Click the domain name you want to configure.
 
-3. Click **Activate** next to **Autorenew** in the domain information section.
+3. Click **Activate** under **Autorenew** in the domain information section.
 
     <Lightbox src="scaleway-domain-autorenew.webp" alt="" />
 
-Autorenew is activated for your domain name.
+You have activated autorenew for your domain name.
 
 ## How to deactivate autorenew
 
 1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
-The Domain & DNS dashboard displays. 
+The Domain & DNS dashboard displays with a list of your internal domains.
 
 2. Click the domain name you want to configure.
 
-3. Click **Deactivate** next to **Autorenew** in the domain information section.
+3. Click **Deactivate** under **Autorenew** in the domain information section.
 
 4. Click **Validate** in the pop-up to confirm. 
 
-Autorenew is deactivated for your domain name.
+You have deactivated autorenew for your domain name.
 
  
 <Navigation title="See Also">
