--- a/network/dns-cloud/how-to/configure-dnssec-external-domain.mdx
+++ b/network/dns-cloud/how-to/configure-dnssec-external-domain.mdx
@@ -1,16 +1,16 @@
 ---
 meta:
   title: How to configure DNSSEC for an external domain name
-  description: This page explains how to configure DNSSEC for an external domain name.
+  description: This page explains how to configure DNSSEC for an internal domain name.
 content:
-  h1: How to configure DNSSEC for an external domain name
-  paragraph: This page explains how to configure DNSSEC for an external domain name.
+  h1: How to configure DNSSEC for an internal domain name
+  paragraph: This page explains how to configure DNSSEC for an internal domain name.
 dates:
   validation: 2022-10-12
   posted: 2022-10-12
 ---
 
-DNSSEC uses digital signatures based on public key cryptography to strengthen DNS authentication. You can enable or disable DNSSEC for each of your external domain names.
+DNSSEC uses digital signatures based on public key cryptography to strengthen DNS authentication. You can enable or disable DNSSEC for each of your internal domain names.
 
 <Message type="requirement">
 
@@ -23,12 +23,12 @@ DNSSEC uses digital signatures based on public key cryptography to strengthen DN
 
 1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
- The Domain & DNS dashboard displays. 
+ The Domain & DNS dashboard displays with a list of your domains.
 
-2. Click the domain name you want to configure.
+2. Click the **Internal domains** tab. The list of your internal domains displays.
 
-3. Click **Activate** next to **DNSSEC** in the domain information section.
-
+3. Click the domain name you want to configure. 
+4. Click **Activate** under **DNSSEC** in the domain information section.
     <Lightbox src="scaleway-domain-dnssec.webp" alt="" />
 
 4. Fill in the required information: 
@@ -37,21 +37,21 @@ DNSSEC uses digital signatures based on public key cryptography to strengthen DN
     * Digest type
     * Public key
 
-5. Click **Activate DNSSEC** to activate the configuration.
+DNSSEC will be active in a matter of minutes. 
 
 ## How to edit or deactivate DNSSEC
 
 1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
-  The Domain & DNS dashboard displays. 
+  The Domain & DNS dashboard displays with a list of your domains.
   
-2. Click the domain name you want to configure.
+2. Click the **Internal domains** tab. The list of your internal domains displays.
 
-3. Click **Edit** next to **DNSSEC** in the domain information section.
+3. Click the domain name you want to configure. 
 
-4. Edit the DNSSEC information for your domain name, then click **Edit DNSSEC** to validate. 
+4. Click **Deactivate** under **DNSSEC** in the domain information section.
 
-5. Click **Deactivate DNSSEC** to deactivate DNSSEC. 
+DNSSEC will be deactivated in a matter of minutes.
 
 <Navigation title="See Also">
   <PreviousButton to="/network/dns-cloud/how-to/configure-dnssec-internal-domain/">How to configure DNSSEC for an internal domain</PreviousButton>
