--- a/network/load-balancer/how-to/add-certificate.mdx
+++ b/network/load-balancer/how-to/add-certificate.mdx
@@ -50,7 +50,7 @@ Scaleway Load Balancer allows you to add certificates in two different ways:
 
 4. Click **Create a SSL certificate**. A pop-up displays:
 
-  <Lightbox src="scaleway-cert-lets-encrypt.webp" alt="" />
+    <Lightbox src="scaleway-cert-lets-encrypt.webp" alt="" />
 
 5. Enter the required information:
 
@@ -61,13 +61,13 @@ Scaleway Load Balancer allows you to add certificates in two different ways:
 
 6. Click **Create SSL certificate**.
 
-  You are returned to the **SSL certificates** tab where your newly-created certificate now appears.
+    You are returned to the **SSL certificates** tab where your newly-created certificate now appears. You must now attach the certificate to your frontend:
 
 7. Click the **Frontends** tab.
 
 8. Click the three dot menu next to the frontend you want to add the certificate to, then click **Edit**.
 
-  <Lightbox src="scaleway-edit-frontend.webp" alt="" />
+    <Lightbox src="scaleway-edit-frontend.webp" alt="" />
 
 9. Select the certificate you just created from the **SSL Certificate(s)** dropdown, then click **Edit Frontend**.
 
@@ -97,7 +97,7 @@ Alternatively you can also choose to import a **[self-signed certificate]()**, n
 
 4. Click **Create a SSL certificate**. A pop-up displays:
 
-  <Lightbox src="scaleway-certificate-import.webp" alt="" />
+    <Lightbox src="scaleway-certificate-import.webp" alt="" />
 
 5. Enter the required information:
 
@@ -107,15 +107,15 @@ Alternatively you can also choose to import a **[self-signed certificate]()**, n
 
 6. Click **Create SSL certificate**.
 
-  You are returned to the **SSL certificates** tab where your newly-created certificate now appears.
+    You are returned to the **SSL certificates** tab where your newly-created certificate now appears. You must now attach the certificate to your frontend:
 
-  <Lightbox src="scaleway-create-self-certificate.webp" />	
+    <Lightbox src="scaleway-create-self-certificate.webp" />	
 
 7. Click the **Frontends** tab.
 
 8. Click the three dot menu next to the frontend you want to add the certificate to, then click **Edit**
 
-  <Lightbox src="scaleway-edit-frontend.webp" alt="" />
+    <Lightbox src="scaleway-edit-frontend.webp" alt="" />
 
 9. Select the certificate you just created from the **SSL Certificate(s)** dropdown, then click **Edit Frontend**.
 
