Apply suggestions from code review
Co-authored-by: nedaehm <87707325+nedaehm@users.noreply.github.com>

--- a/faq/domains-and-dns.mdx
+++ b/faq/domains-and-dns.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
-  title: Domains & DNS
-  description: Discover Domains & DNS.
+  title: Domains and DNS
+  description: Discover Domains and DNS.
 content:
-  h1: Domains & DNS
-  paragraph: Discover Domains & DNS.
+  h1: Domains and DNS
+  paragraph: Discover Domains and DNS.
 image: DNS.webp
 ---
 
@@ -76,14 +76,16 @@ There are 7 extensions available:
 
 <Message type="note">
 
-To be able to use the `.eu` extension, you need to be a resident of the European Union. 
+To be able to use the `.eu` extension, you need to be a citizen of a country in the European Union. 
+To be able to use the `.fr` extension, you need to have an address in the European Economic Area and/or Switzerland.
+
 
 </Message>
 
 
 ## Why is my domain registration refused? 
 Your domain registration may be refused if you do not meet the conditions set by the registry. 
-Ex: If your extension is “.fr” you must be a resident in France, otherwise your domain registration will be refused. 
+Ex: If your extension is “.fr” you must have an address in the European Economic Area and/or Switzerland, otherwise your domain registration will be refused. 
 
 
 
