--- a/network/dns-cloud/concepts.mdx
+++ b/network/dns-cloud/concepts.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
-  title: Domains & DNS - Concepts
-  description: This page explains all the concepts related to Scaleway's Domains & DNS service
+  title: Domains and DNS - Concepts
+  description: This page explains all the concepts related to Scaleway's Domains and DNS service
 content:
   h1: Concepts
-  paragraph: This page explains all the concepts related to Domains & DNS
+  paragraph: This page explains all the concepts related to Domains and DNS
 categories:
   - compute
 ---
@@ -69,7 +69,7 @@ A DNS zone file describes a [DNS Zone](#dns-zone), containing DNS records which 
 
 ## External Domain
 
-An external domain is any domain created via an external registrar (i.e. not by Scaleway). Scaleway Domains & DNS is currently able to manage DNS zones for external domains.
+An external domain is any domain created via an external registrar (i.e. not by Scaleway). Scaleway Domains and DNS is currently able to manage DNS zones for external domains.
 
 </Concept>
 
@@ -108,8 +108,8 @@ Root Servers are a type of [DNS nameservers](#dns-name-server) pertaining to Top
 
 <Concept>
 
-## Scaleway Domains & DNS
+## Scaleway Domains and DNS
 
-Scaleway Domains & DNS is a managed [DNS](#dns) service that allows you to easily configure the [DNS Zones](#dns-zone) of your [domains](#domain-name). It provides support for queries via both IPv4 and IPv6, and supports all common types of [DNS records](#dns-record).
+Scaleway Domains and DNS is a managed [DNS](#dns) service that allows you to easily configure the [DNS Zones](#dns-zone) of your [domains](#domain-name). It provides support for queries via both IPv4 and IPv6, and supports all common types of [DNS records](#dns-record).
 
 </Concept>
