--- a/network/dns-cloud/how-to/_renew-internal-domain.mdx
+++ b/network/dns-cloud/how-to/_renew-internal-domain.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
   title: How to renew an internal domain name
-  description: This page explains how to renew an internal domain name with Scaleway Domains & DNS.
+  description: This page explains how to renew an internal domain name with Scaleway Domains and DNS.
 content:
   h1: How to renew an internal domain name
-  paragraph: This page explains how to renew an internal domain name with Scaleway Domains & DNS.
+  paragraph: This page explains how to renew an internal domain name with Scaleway Domains and DNS.
 dates:
   validation: 2022-10-12
   posted: 2022-10-12
@@ -16,13 +16,13 @@ You can renew your domain name at any time during the validity period, directly 
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have a domain name registered with Scaleway Domains & DNS
+- You have a domain name registered with Scaleway Domains and DNS
 
 </Message>
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
-  The Domain & DNS dashboard displays. 
+  The Domains and DNS dashboard displays. 
   
 2. Click the domain name you want to configure. You are redirected to your domain's overview page.
 
