--- a/network/dns-cloud/how-to/configure-autorenew.mdx
+++ b/network/dns-cloud/how-to/configure-autorenew.mdx
@@ -1,29 +1,29 @@
 ---
 meta:
   title: How to configure autorenew for an internal domain name
-  description: This page explains how to configure autorenew for an internal domain name with Scaleway Domains & DNS.
+  description: This page explains how to configure autorenew for an internal domain name with Scaleway Domains and DNS.
 content:
   h1: How to configure autorenew for an internal domain name
-  paragraph: This page explains how to configure autorenew for an internal domain name with Scaleway Domains & DNS.
+  paragraph: This page explains how to configure autorenew for an internal domain name with Scaleway Domains and DNS.
 dates:
   validation: 2022-10-12
   posted: 2022-10-12
 ---
 
-Autorenew is a feature that allows you to automatically renew the validity period of a domain name registered with Scaleway Domains & DNS on a yearly basis.
+Autorenew is a feature that allows you to automatically renew the validity period of a domain name registered with Scaleway Domains and DNS on a yearly basis.
 
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have a domain name registered with Scaleway Domains & DNS
+- You have a domain name registered with Scaleway Domains and DNS
 
 </Message>
 
 ## How to activate autorenew
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
-The Domain & DNS dashboard displays with a list of your internal domains.
+The Domains and DNS dashboard displays with a list of your internal domains.
 
 2. Click the domain name you want to configure.
 
@@ -35,9 +35,9 @@ You have activated autorenew for your domain name.
 
 ## How to deactivate autorenew
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
-The Domain & DNS dashboard displays with a list of your internal domains.
+The Domains and DNS dashboard displays with a list of your internal domains.
 
 2. Click the domain name you want to configure.
 
