--- a/network/dns-cloud/how-to/delete-domain.mdx
+++ b/network/dns-cloud/how-to/delete-domain.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
-  title: How to delete a domain from Scaleway Domains & DNS
-  description: This page explains how delete a domain from Scaleway Domains & DNS
+  title: How to delete a domain from Scaleway Domains and DNS
+  description: This page explains how delete a domain from Scaleway Domains and DNS
 content:
-  h1: How to delete a domain from Scaleway Domains & DNS
-  paragraph: This page explains how delete a domain from Scaleway Domains & DNS
+  h1: How to delete a domain from Scaleway Domains and DNS
+  paragraph: This page explains how delete a domain from Scaleway Domains and DNS
 dates:
   validation: 2022-11-03
   posted: 2021-06-07
@@ -13,7 +13,7 @@ dates:
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway Domains & DNS
+- You have [linked your domain](/network/dns-cloud/how-to/add-external-domain) with Scaleway Domains and DNS
 
 </Message>
 
@@ -27,7 +27,7 @@ dates:
     <Lightbox src="scaleway-dns-delete-domain.webp" alt="" />
     <Message type="important">
 
-    This will permanently delete your external domain and its related zones from Scaleway Domains & DNS. This action is irreversible and your domain name may become unresolvable. 
+    This will permanently delete your external domain and its related zones from Scaleway Domains and DNS. This action is irreversible and your domain name may become unresolvable. 
 
     </Message>
 
