--- a/network/dns-cloud/how-to/manage-nameservers-internal-domain.mdx
+++ b/network/dns-cloud/how-to/manage-nameservers-internal-domain.mdx
@@ -1,27 +1,27 @@
 ---
 meta:
   title: How to manage nameservers for an internal domain name
-  description: This page explains how to manage nameservers for an internal domain name with Scaleway Domains & DNS.
+  description: This page explains how to manage nameservers for an internal domain name with Scaleway Domains and DNS.
 content:
   h1: How to manage nameservers for an internal domain name
-  paragraph: This page explains how to manage nameservers for an internal domain name with Scaleway Domains & DNS.
+  paragraph: This page explains how to manage nameservers for an internal domain name with Scaleway Domains and DNS.
 dates:
   validation: 2022-10-12
   posted: 2022-10-12
 ---
 
-Scaleway Domains & DNS provides a managed DNS solution by providing default nameservers for each domain name. If you want to use your own DNS servers, you can modify the nameservers associated with your domain name.
+Scaleway Domains and DNS provides a managed DNS solution by providing default nameservers for each domain name. If you want to use your own DNS servers, you can modify the nameservers associated with your domain name.
 
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have a domain name registered with Scaleway Domains & DNS
+- You have a domain name registered with Scaleway Domains and DNS
 
 </Message>
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
- The Domain & DNS dashboard displays. 
+ The Domains and DNS dashboard displays. 
  
 2. Click the domain name you want to configure.
 
@@ -38,7 +38,7 @@ Scaleway Domains & DNS provides a managed DNS solution by providing default name
 
     </Message>
 
-    It is recommended to confiugure a minimum of two and a maximum of seven DNS servers for each domain name. To add additional servers, click **Add name server** and enter you server's information. 
+    We recommend you configure a minimum of two and a maximum of seven DNS servers for each domain name. To add additional servers, click **Add name server** and enter you server's information. 
 
 5. Click <Icon name="delete" /> to remove a nameserver, then click **Delete** in the pop-up to confirm.
 
