--- a/network/dns-cloud/how-to/register-internal-domain.mdx
+++ b/network/dns-cloud/how-to/register-internal-domain.mdx
@@ -1,37 +1,38 @@
 ---
 meta:
   title: How to register an internal domain name
-  description: This page explains how to register an internal domain name with Scaleway Domains & DNS.
+  description: This page explains how to register an internal domain name with Scaleway Domains and DNS.
 content:
   h1: How to register an internal domain name
-  paragraph: This page explains how to register an internal domain name with Scaleway Domains & DNS.
+  paragraph: This page explains how to register an internal domain name with Scaleway Domains and DNS.
 dates:
   validation: 2022-10-12
   posted: 2022-10-12
 ---
 
-Domains & DNS is a managed service, that allows you to register a domain name and configure its DNS zones from a graphical interface. It provides support for queries via both IPv4 and IPv6 and supports all common types of DNS records.
+Domains and DNS is a managed service, that allows you to register a domain name and configure its DNS zones from a graphical interface. It provides support for queries via both IPv4 and IPv6 and supports all common types of DNS records.
 
-Scaleway Domains & DNS is available to manage DNS zones for internal and external domains (domains created at external registrars). 
+Scaleway Domains and DNS is available to manage DNS zones for internal and external domains (domains created at external registrars). 
 
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
+- You have entered your credit card information on your account.
 
 </Message>
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. The Domain & DNS dashboard displays. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. The Domains and DNS dashboard displays. 
 
  If you have not created a domain yet, the registration page displays:
  <Lightbox src="scaleway-dns-interface.webp" alt="" />
 
-2. Enter the domain name in the box and click the search icon to verify the domain is available. 
+2. Enter the domain name you wish to register in the box and click the search icon to verify the domain is available. 
  
  A selection of available domain names displays.
 
 3. Check the domain names you want to register. Then click **Select and configure contacts**.
 
-4. If you already have a domain you can select the same contacts to be used for your domain name. If you do not have any contact, click **Create contact** to create a new one. 
+4. If you already have a domain, you can select the same contacts to be used for your newly-registered domain name. If you do not have any contact, click **Create contact** to create a new one. 
 
 5. Click **Validate and continue**.
 
