--- a/network/dns-cloud/how-to/unlock-internal-domain.mdx
+++ b/network/dns-cloud/how-to/unlock-internal-domain.mdx
@@ -1,10 +1,10 @@
 ---
 meta:
   title: How to unlock an internal domain name
-  description: This page explains how to unlock an internal domain name with Scaleway Domains & DNS.
+  description: This page explains how to unlock an internal domain name with Scaleway Domains and DNS.
 content:
   h1: How to unlock an internal domain name
-  paragraph: This page explains how to unlock an internal domain name with Scaleway Domains & DNS.
+  paragraph: This page explains how to unlock an internal domain name with Scaleway Domains and DNS.
 dates:
   validation: 2022-10-12
   posted: 2022-10-12
@@ -15,23 +15,23 @@ Domain names are locked by default to avoid any unsolicited outgoing transfer. I
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway console](https://console.scaleway.com) 
-- You have a domain name registered with Scaleway Domains & DNS
+- You have a domain name registered with Scaleway Domains and DNS
 
 </Message>
 
 ## How to unlock a domain name
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. 
 
- The Domain & DNS dashboard displays. 
+ The Domains and DNS dashboard displays. 
  
 2. Click the domain name you want to configure.
 
-3. Click **Unlock** next to **Transfer** in the domain information section. A pop-up displays.
+3. Click **Unlock** under **Transfer** in the domain information section. A pop-up displays.
 
     <Lightbox src="scaleway-domain-unlock.webp" alt="" />
 
-4. Click **Validate** to unlock your domain name.
+4. Click **Unlock** to unlock your domain name.
 5. Click <Icon name="copy" /> to copy the authentication code for your domain name and paste it in the form at your new registrar. 
 
     <Lightbox src="scaleway-domain-copy-auth.webp" alt="" />
@@ -46,12 +46,12 @@ Domain names are locked by default to avoid any unsolicited outgoing transfer. I
 
 ## How to lock a domain name
 
-1. Click **Domains & DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. The Domain & DNS dashboard displays. 
+1. Click **Domains and DNS** in the **Network** section of the [Scaleway Console](https://console.scaleway.com) side menu. The Domains and DNS dashboard displays. 
 
 2. Click the domain name you want to configure.
 
-3. Click **Lock** next to **Transfer** in the domain information section.
-
+3. Click **Lock** under **Transfer** in the domain information section. A pop-up displays asking you to confirm.
+4. Click **Lock** to confirm. Your domain will be locked in a matter of minutes.
 <Navigation title="See Also">
   <PreviousButton to="/network/dns-cloud/how-to/configure-autorenew/">How to configure autorenew</PreviousButton>
   <NextButton to="/network/dns-cloud/how-to/manage-nameservers-internal-domain/">How to manage neameservers of an internal domain</NextButton>
