Apply suggestions from code review

--- a/faq/domains-and-dns.mdx
+++ b/faq/domains-and-dns.mdx
@@ -14,7 +14,7 @@ You need a valid and reliable email address and a valid debit or credit card. Yo
 
 ## Which rights are associated with the owner of a domain?
 
-The owner of a domain can update all the technical and administrative parameters referring to their domain name, indicate and change the administrative, technical and invoicing contacts. During the public beta, you must contact the support team to modify the contacts you have entered. 
+The owner of a domain can update all the technical and administrative parameters referring to their domain name, indicate and change the administrative and technical and contacts. During the public beta, you must contact the support team to modify the contacts you have entered. 
 
 ## What are the responsibilities of the domain name holders?
 
