--- a/compute/kubernetes/api-cli/managing-storage.mdx
+++ b/compute/kubernetes/api-cli/managing-storage.mdx
@@ -69,6 +69,9 @@ The CSI driver allows to use [Persistent Volumes](https://kubernetes.io/docs/con
     ```
     $ kubectl apply -f pvc-deployment/deployment.yaml
     ```
+<Message type="note">
+  At the moment Scaleway Block Storage suports only `ReadWriteOnce` access mode
+</Message>
 
 ## Creating raw block volumes 
 
